--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -7,64 +7,86 @@
 // Description: User List HTML file
 =======================================
 */-->
+<div fxLayout="column">
+  <mat-card fx-Flex style="margin-top: .5%; width: 60%; margin-left: 20%;" class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title style="font-size:24px;margin-top:20px;">My Profile</mat-card-title>
+      <mat-card-subtitle>Information:</mat-card-subtitle>
+    </mat-card-header>
 
-<div fxLayout="column" style="margin-top: 3em;">
+    <!-- error message display -->
+    <small style="color: red;" *ngIf="errorMessage">{{errorMessage}}</small>
 
-  <!--mat card to hold users configuration table-->
-  <mat-card class="users-list-card">
-    <mat-card-title class="users-title">Edit Profile</mat-card-title>
+    <mat-divider></mat-divider>
+    <br><br>
+        <mat-card-content>
+            <mat-card>
+                <mat-list role="list" style="margin-top:-50px">
+                <br><br>
+                    <mat-label>First Name:</mat-label>
+                    <mat-list-item role="firstName"><strong>{{user.firstName}}</strong></mat-list-item>
 
-    <mat-card-content *ngIf="users">
-      <!-- mat-table with header sections for user data-->
-             <table mat-table fxFlexFill [dataSource]="users">
-        <ng-container matColumnDef="userName">
-          <th mat-header-cell *matHeaderCellDef>Username</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.userName }}
-          </td>
-        </ng-container>
+                    <mat-label>Last Name:</mat-label>
+                    <mat-list-item role="lastName"><strong>{{user.lastName}}</strong></mat-list-item>
 
-        <ng-container matColumnDef="firstName">
-          <th mat-header-cell *matHeaderCellDef>First Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
-        </ng-container>
+                    <mat-label>Email:</mat-label>
+                    <mat-list-item role="email"><strong>{{user.email}}</strong></mat-list-item>
 
-        <ng-container matColumnDef="lastName">
-          <th mat-header-cell *matHeaderCellDef>Last Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
-        </ng-container>
+                    <mat-label>Phone:</mat-label>
+                    <mat-list-item role="phone"><strong>{{user.phoneNumber}}</strong></mat-list-item>
 
-        <ng-container matColumnDef="phoneNumber">
-          <th mat-header-cell *matHeaderCellDef>Phone Number</th>
-          <td mat-cell *matCellDef="let element">{{ element.phoneNumber }}</td>
-        </ng-container>
+                    <mat-label>Address1:</mat-label>
+                    <mat-list-item role="addressOne"><strong>{{user.addressLineOne}}</strong></mat-list-item>
 
-        <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef>Address</th>
-          <td mat-cell *matCellDef="let element">{{ element.address }}</td>
-        </ng-container>
+                    <mat-label>Address2:</mat-label>
+                    <mat-list-item role="addressTwo"><strong>{{user.addressLineTwo}}</strong></mat-list-item>
 
-        <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef>Email</th>
-          <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-        </ng-container>
-        <ng-container matColumnDef="functions">
+                    <mat-label>City:</mat-label>
+                    <mat-list-item role="city"><strong>{{user.city}}</strong></mat-list-item>
 
-          <!-- functions for editing profile -->
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element">
+                    <mat-label>State:</mat-label>
+                    <mat-list-item role="state"><strong>{{user.state}}</strong></mat-list-item>
 
-            <button mat-icon-button routerLink="/session/users/{{ element._id }}">
-              <mat-icon color="black" class="functions-icon">edit</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-
-
-    </mat-card-content>
+                    <mat-label>Zip Code:</mat-label>
+                    <mat-list-item role="zip"><strong>{{user.zip}}</strong></mat-list-item>
+                    <button style="margin-left:90%" mat-icon-button routerLink="/session/users/{{ user._id }}">
+                      <mat-icon color="black" class="functions-icon">edit</mat-icon>
+                    </button>
+                  </mat-list>
+            </mat-card>
+           <br>
+            <mat-card class="mat-elevation-z8">
+               <mat-card-content>
+                 <br>
+                   <mat-list role="list" style="margin-top:-50px">
+                    <br>
+                   <mat-label>Edit Username:</mat-label>
+                   <mat-list-item role="username"><strong>{{user.userName}}</strong></mat-list-item>
+                   <mat-list-item role="role">
+                    <button style="margin-left:90%" mat-icon-button routerLink="/session/users/{{ user._id }}">
+                      <mat-icon color="black" class="functions-icon">edit</mat-icon>
+                    </button>
+                  </mat-list-item>
+                  <br><br>
+                   </mat-list>
+                </mat-card-content>
+            </mat-card>
+           <br>
+            <mat-card class="mat-elevation-z8">
+               <mat-card-content>
+                 <br>
+               <mat-list role="list" style="margin-top:-50px">
+                <br>
+                  <mat-label>Edit Password:</mat-label>
+                  <mat-list-item role="role">
+                    <button style="margin-left:90%" mat-icon-button routerLink="/session/users/{{ user._id }}">
+                      <mat-icon color="black" class="functions-icon">edit</mat-icon>
+                    </button>
+                  </mat-list-item>
+                    <br><br>
+               </mat-list>
+               </mat-card-content>
+           </mat-card>
+        </mat-card-content>
   </mat-card>
 </div>
