--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -50,7 +50,7 @@
 
                     <mat-label>Zip Code:</mat-label>
                     <mat-list-item role="zip"><strong>{{user.zip}}</strong></mat-list-item>
-                    <button style="margin-left:90%" mat-icon-button routerLink="/session/users/{{ user._id }}">
+                    <button style="margin-left:90%" mat-icon-button routerLink="/session/users/{{ user.userId }}">
                       <mat-icon color="black" class="functions-icon">edit</mat-icon>
                     </button>
                   </mat-list>
