CRUD service page

--- a/src/app/pages/services-create/services-create.component.html
+++ b/src/app/pages/services-create/services-create.component.html
@@ -6,73 +6,4 @@
 // Description: HTML file for creating a service
 -->
 
-<div fxLayout="column">
-  <mat-card
-    style="margin: 1% 19% 1% 19%; padding: 0px; background-color: #ffffff"
-    class="mat-elevation-Z5 user-card"
-  >
-    <mat-card-title class="user-title">Create a Service</mat-card-title>
-    <br />
-
-    <form
-      [formGroup]="form"
-      #userForm
-      (ngSubmit)="createService()"
-      autocomplete="off"
-      style="padding: 16px"
-    >
-      <mat-card-content>
-        <div fxLayout="column" fxLayoutGap="10px">
-          <mat-form-field>
-            <mat-label>Service Name</mat-label>
-            <input
-              type="text"
-              matInput
-              [formControl]="form.controls['title']"
-            />
-
-            <mat-error
-              *ngIf="
-                form.controls.title.hasError('required') &&
-                form.controls.title.touched
-              "
-            >
-              Service Name is a required field.
-            </mat-error>
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Service Price</mat-label>
-            <input
-              type="text"
-              matInput
-              [formControl]="form.controls['price']"
-            />
-            <mat-error
-              *ngIf="
-                form.controls.price.hasError('required') &&
-                form.controls.price.touched
-              "
-            >
-              Service Price is a required field.
-            </mat-error>
-          </mat-form-field>
-        </div>
-      </mat-card-content>
-      <br />
-      <mat-card-actions fxLayoutAlign="end">
-        <button mat-stroked-button (click)="cancel()" class="btn-back">
-          cancel
-        </button>
-        <button
-          type="submit"
-          mat-stroked-button
-          [disabled]="!form.valid"
-          class="btn-primary"
-        >
-          submit
-        </button>
-      </mat-card-actions>
-    </form>
-  </mat-card>
-</div>
+<p>This page works</p>
