--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -7,11 +7,10 @@
 // Description: User List HTML file
 =======================================
 */-->
-
 <div fxLayout="column">
-  <mat-card fx-Flex style="margin-top: .5%; width: 60%; margin-left: 20%;" class="mat-elevation-z8">
+  <mat-card fx-Flex style="margin-top: .5%; width: 60%; margin-left: 20%;" class="mat-elevation-z8 user-profile-card">
     <mat-card-header>
-      <mat-card-title style="font-size:24px;margin-top:20px;">My Profile</mat-card-title>
+      <mat-card-title style="font-size:24px;margin-top:20px;" class="users-title">My Profile</mat-card-title>
       <mat-card-subtitle>Information:</mat-card-subtitle>
     </mat-card-header>
 
@@ -50,7 +49,7 @@
 
                     <mat-label>Zip Code:</mat-label>
                     <mat-list-item role="zip"><strong>{{user.zip}}</strong></mat-list-item>
-                    <button style="margin-left:90%" mat-icon-button routerLink="/session/users/{{ user.userId }}">
+                    <button style="margin-left:90%" mat-icon-button routerLink="/session-employee/edit-profile/{{ user._id }}">
                       <mat-icon color="black" class="functions-icon">edit</mat-icon>
                     </button>
                   </mat-list>
@@ -91,4 +90,3 @@
         </mat-card-content>
   </mat-card>
 </div>
-
